fix alignment of networks

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -26,7 +26,9 @@ header .profile {
   border-radius: 50%;
 }
 header .networks {
+  display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 header .networks img {
